--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "yaml-peg-rs"]
 	path = yaml-peg-rs
-	url = https://github.com/IshitaTakeshi/yaml-peg-rs.git
+    url = https://github.com/IshitaTakeshi/yaml-peg-rs.git
+    branch = fix/float-parse-error
