--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "velodyne_driver"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [features]
 default = ["std"]
 std = []
@@ -12,7 +10,8 @@ std = []
 [dependencies]
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 yaml-peg = { default-features = false, path = "./yaml-peg-rs" }
-bincode = { version = "1.3.3", default-features = false }
+zerocopy = { version = "0.7.34", features = ["derive"] }
+num-traits = { version = "0.2", default-features = false, features = ["libm"] }
 
 [dev-dependencies]
 csv = "1.3.0"
